improve open card animation effect, fix size of cards layout on mobile

--- a/style.css
+++ b/style.css
@@ -56,9 +56,8 @@ main {
   display: flex;
   flex-direction: column;
   /* flex-wrap: nowrap; */
-  width: 400px;
-  transition: width 0.3s ease;
-  /* height: auto; */
+  width: 25rem;
+  height: auto;
   /* word-break: break-all; */
   text-align: justify;
   margin: 20px;
@@ -67,12 +66,13 @@ main {
   background-color: #f1c572b0;
   border: 1px solid coral;
   border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
 .recipe-card img {
   width: 100%;
   /* height: 320px; */
-  max-height: 100%;
+  max-height: 50%;
   object-fit: cover;
 }
 
@@ -92,10 +92,11 @@ main {
 }
 
 .recipe-card.active {
-  width: 500px;
-  /* height: auto; */
+  width: 70vw;
+  height: 100vh;
+  /* height: 25rem; */
   cursor: auto;
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
 }
 
 .recipe-card.active .recipe-text {
@@ -106,20 +107,20 @@ main {
   justify-content: center;
   padding: 0 15px;
   /* max-height: 700px; */
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
-.recipe-text::-webkit-scrollbar-track {
+.recipe-card::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
 }
 
-.recipe-text::-webkit-scrollbar {
+.recipe-card::-webkit-scrollbar {
   width: 8px;
   background-color: #f5f5f5;
 }
 
-.recipe-text::-webkit-scrollbar-thumb {
+.recipe-card::-webkit-scrollbar-thumb {
   background-color: rgba(255, 127, 80, 0.596);
 }
 
@@ -153,4 +154,14 @@ i {
 .recipe-instructions p,
 .recipe-instructions ol li {
   font-size: 15px;
+}
+
+@media (max-width: 900px) {
+  .recipe-card.active {
+    width: 100vw;
+  }
+
+  .recipe-card::-webkit-scrollbar {
+    width: 15px;
+  }
 }
